almost done with #81 - need to fix overflow of lines.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
     body {
         font-size: 1em;
         line-height: 1.3;
+        overflow: hidden;
     }
 
     p {
